<resources>
    <string name="app_name">Mechanic Now</string>
    <string name="mechanics_now">Mechanics Now</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="do_not_have_account">No account? Sign Up</string>
    <string name="hello">Hello</string>
    <string name="start_your_journey">Start Your journey</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="roadside_assistance_solution">roadside_assistance_solution</string>
    <string name="mechanicnow">mechanicnow</string>
    <string name="request_assistance">Request Assistance</string>
    <string name="register_mechanic_account">Register Mechanic Account</string>
    <string name="mechanic_login">Mechanic login</string>
    <string name="garage">Garage</string>
    <string name="mechanic_portal">Mechanic Portal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">update</string>
    <string name="manage_profile">Manage profile</string>
    <string name="view_map">View map</string>
    <string name="logout">Logout</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="reset_password">reset password</string>
</resources>