<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginPage">


    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhaina"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhaina"
        android:text="@string/sign_in_to_continue"
        android:textSize="15sp"
        android:transitionName="sub_trans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:hint="@string/phone_number"
            android:transitionName="user_trans"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhaina"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            android:transitionName="pass_trans"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhaina"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="5dp"
            android:background="@color/red"
            android:fontFamily="@font/baloo_bhaina"
            android:onClick="loginUser"
            android:text="@string/login"
            android:transitionName="log_trans" />

        <Button
            android:id="@+id/no_account"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorTransparent"
            android:elevation="0dp"
            android:fontFamily="@font/baloo_bhaina"
            android:onClick="userSignUp"
            android:text="@string/do_not_have_account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:transitionName="sign_trans" />

    </LinearLayout>

</LinearLayout>