<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Dashboard">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/dash_board"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/layout_header"
            android:backgroundTint="@color/teal_700"
            android:padding="10dp">

            <TextView
                android:id="@+id/dash_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/basic"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/start_journey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dash_user"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/basic"
                android:padding="5dp"
                android:text="@string/request_assistance"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/row_one"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@id/dash_board"
            android:orientation="horizontal"
            android:layout_marginTop="65dp"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_baseline_person_24"/>

                    <TextView
                        android:id="@+id/profile_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/profile_image"
                        android:layout_centerHorizontal="true"
                        android:textSize="14sp"
                        android:text="View profile"
                        android:textColor="@color/colorBlack"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/maps_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/records_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/records_image"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_baseline_map"/>

                    <TextView
                        android:id="@+id/records_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/records_image"
                        android:layout_centerHorizontal="true"
                        android:textSize="14sp"
                        android:text="@string/view_map"
                        android:textColor="@color/colorBlack"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/logoutUser"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row_one"
            android:backgroundTint="@color/colorTransparent"
            android:fontFamily="@font/baloo_bhaina"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:transitionName="sign_trans" />



    </RelativeLayout>

</RelativeLayout>

